--- a/static/chatbot-admin/css/common.css
+++ b/static/chatbot-admin/css/common.css
@@ -507,21 +507,27 @@ img {
   padding: 0 16px;
 }
 
+.modal-background {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1000;
+  background: rgba(0, 0, 0, 0.5);
+  justify-content: center;
+  align-items: center;
+}
+
 .modal {
   display: none;
   flex-direction: column;
   background-color: #fff;
-  margin: auto;
-  border: 1px solid #d4d4d4;
   box-shadow: 0 0 25px rgba(0, 0, 0, 0.1);
-  border-radius: 8px;
   width: 300px;
   height: 200px;
   text-align: center;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
 }
 
 .modal-text {
@@ -541,7 +547,6 @@ img {
   width: 100%;
   height: 50px;
   box-shadow: 0 0 25px rgba(0, 0, 0, 0.1);
-  border-radius: 0 0 8px 8px;
   overflow: hidden;
 }
 
@@ -558,11 +563,10 @@ img {
   border: none;
   cursor: pointer;
   box-shadow: 0 0 25px rgba(0, 0, 0, 0.1);
-  border-radius: 0 0 8px 8px;
-}
 
-#modalConfirmButton:hover {
-  background-color: #0056b3;
+  &:hover {
+    background-color: #0056b3;
+  }
 }
 
 #modalCancelButton,
@@ -578,4 +582,8 @@ img {
   color: white;
   border: none;
   cursor: pointer;
+
+  &:hover {
+    background-color: #0056b3;
+  }
 }
